@@ -10,6 +10,10 @@
 <%@taglib uri="http://ajaxtags.sourceforge.net/tags/ajaxtags" prefix="ajax"%>
 <%@taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 
+<div>
+	<b>${dashboard.title}</b> <br>
+    &nbsp;&nbsp;&nbsp;${dashboard.description}
+</div>
 <div align="left">
 	<table class="plain">
 		<tr>
